static/css/style.css
/* fonts ---------------------------------------- */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');

.open-sans {
    font-family: "Open Sans Condensed",  sans-serif;
}

.logo-text {
    margin-left: 20px;
    font-weight: bold;
    letter-spacing: 5px;
    text-transform: uppercase;
}


/* body and main content ---------------------------------------- */

html {
    margin-top: 64px;
}

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}
      

/* all rows ---------------------------------------- */
.row-no-margin {
    margin-bottom: 0px;
}


/* navbar ---------------------------------------- */
.nav-extended {
    background-color: #093824;
    position: fixed;
    z-index: 10;
    top: 0;
}

.navbar-text a {
    font-size: 20px!important;
}

.sidenav {
    background-color: #093824!important;
}

.sidenav li>a {
    color: #FCFCFF;
}

/* buttons ---------------------------------------- */
.btn {
    font-family: "Open Sans Condensed",  sans-serif;
    text-transform: none;
    font-weight: bold!important;
    background-color: #FCFCFF!important;
    color: #000000!important;
    box-shadow: none!important;
}

.btn-blue {
    background-color: #406E8E!important;
    color: #FCFCFF!important;
    box-shadow: none!important;
}

/* index.html -------------------------------------- */
.hero-img {
    height: 400px;
    width: 100%;
    background-image: url('../img/hero1.jpg');
    background-position: center center;
    background-size: cover;
}

.welcome-h1 {
    color: #FCFCFF;
    font-size: 85px;
    margin: 0px;
    padding-top: 150px;
}

.red-info-box {
    background-color: #3E000C;
    height: 300px;
    color: #FCFCFF;
    position: relative;
}

.box-content {
    width: 400px;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.red-info-box h3 {
    font-weight: bold;
}

.blue-info-box {
    background-color: #B7CECE;
    height: 300px;
    color: #000000;
    font-size: 24px;
    position: relative;
}

.category-heading {
    text-align: center;
    font-weight: bold;
}


/* signup.html -------------------------------------- */

#signup-background {
    background-image: url("../img/login-register-hero.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    width: 100%;
    background-color: #FCFCFF;
    min-height: 100vh;
    position: relative;
}

.sign-up-heading {
    font-weight: bold;
}

.card-panel {
    background-color: rgb(252, 252, 255, 0.8);
    width: 500px;
    margin: 0px;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    box-shadow: none;
}

.sign-up {
    font-size: 20px;
}

.already-text {
    font-size: 20px;
}

/* recipies.html --------------------------------- */
.hero-img-recipies {
    height: 400px;
    width: 100%;
    background-image: url('../img/hero2.jpg');
    background-position: center center;
    background-size: cover;
    position: relative;
}

.recipe-area {
    background-color: #B7CECE;
    margin-bottom: 0px;
    padding: 10px;
}

.card-image-position {
    height: 200px;
}

.card-image img {
    object-fit: cover;
    overflow: hidden;
}

.card-content span {
    font-weight: bold!important;
}

.recipe-description-text {
    font-size: 18px;
    margin-bottom: 2px!important;
}

.recipe-buttons {
    text-align: center;
    height: 30px;
}

.btn-delete {
    box-shadow: none;
    width: 80px!important;
    text-transform: capitalize;
    font-weight: bold;
    font-size: 18px;
    color: #FCFCFF!important;
    background-color: #3E000C!important;
}

.btn-edit {
    box-shadow: none;
    width: 80px!important;
    background-color: #406E8E!important;
    text-transform: capitalize;
    font-weight: bold;
    font-size: 18px;
    color: #FCFCFF!important;
}

.recipe-link {
    color: black!important;
    font-size: 20px;
    font-weight: bold;
    text-transform: capitalize!important;
}


/* select_recipe.html ---------------------------------------- */
.recipe-select-img {
    height: 400px;
    padding-left: 0px!important;
    padding-right: 0px!important;
}

.recipe-select-img img {
    width: 100%;
    height: 400px;
    object-fit: cover;
    overflow: hidden;
}

.recipe-description {
    padding-left: 60px!important;
    height: 400px;
    background-color: #3E000C;
}

.select-recipe-h1 {
    font-weight: bold;
    color: #FCFCFF;
}

.select-recipe-description {
    font-size: 24px;
    color: #FCFCFF;
}

.prepstep-col {
    padding-right: 20px!important;
}

.ingredients-col {
    padding-right: 20px!important;
}

.ingredients-col ul {
    margin-left: 20px;
    font-size: 24px;
}

.prepstep-col ol {
    font-size: 24px;
}

.prepstep-col ol li {
    margin-bottom: 30px;
    margin-top: 30px;
}

/* search ------------------------------------------------- */
.card-padding {
    padding: 0px!important;
    border-radius: 15px;
}

.search-row {
    margin: 0px!important;
}

.search-div {
    padding: 0px!important;
}

.no-recipies {
    color: red;
}


/* add_recipe.html ---------------------------------------- */
.add-recipe-container {
    width: 600px;
    margin: auto;
}

.red-text {
    color: red;
    font-size: 14px;
}

.fa-asterisk {
    font-size: 10px;
}

.ingredient-prepstep-text {
    text-align: center;
    font-size: 14px;
}

.label-text {
    font-size: 20px!important;
}

.add-recipe-btn {
    font-size: 18px;
}


/* edit_recipe.html ---------------------------------------- */
.btn-edit {
    width: 80px!important;
}

.btn-cancel {
    background-color: #3E000C!important;
    width: 90px!important;
    font-size: 18px;
    font-weight: bold;
    color: #FCFCFF!important;
}


/* categories.html ---------------------------------------- */
.card {
    background-color: #FCFCFF;
    box-shadow: none;
}

.white-text {
    color: black!important;
}

.category-img img {
    width: 200px;
    height: 200px;
    margin: auto;
    border-radius: 50%;
    object-fit: cover;
    overflow: hidden;
}

.category-title {
    font-size: 36px!important;
}

.edit-cat-padding {
    padding-left: 0px!important;
    padding-right: 0px!important;
}


/* add category ---------------------------------------- */
.add-category-button {
    font-size: 18px;
}


/* profile --------------------------------------------- */
.hero-img-profile {
    height: 400px;
    width: 100%;
    background-image: url('../img/hero3.jpg');
    background-position: center center;
    background-size: cover;
}


/* 404.html --------------------------------------------- */
.error-section h1 {
    font-weight: bold;
}


/* footer ---------------------------------------- */
.footer-row {
    margin-bottom: 0px;
}

.footer-copyright {
    background-color: #093824;
    font-size: 18px;
    color: #FCFCFF;
    width: 100%;
    padding-top: 0px;
}

.social-links {
    margin-top: 18px;
    margin-bottom: 18px;
}

.social-icon i {
    font-size: 24px;
    color: #FCFCFF!important;
    margin-right: 10px;
}


/* flash message -------------------------------------- */

.flashmessage {
    background-color: #3E000C;
}

.flashmessage p {
    color: #FCFCFF;
    font-weight: bold;
    font-size: 28px;
    margin-top: 20px;
    margin-bottom: 5px;
    line-height: 0;
}


/* media query ---------------------------------------- */
/* ------------------- max-width: 480px */
@media (max-width: 480px) {
    .flashmessage p {
        font-size: 14px;
        line-height: 0;
    }

    .error-section h1 {
        font-size: 40px!important;
    }

    .error-section h5 {
        font-size: 18px!important;
    }

    .error-section h6 {
        font-size: 16px!important;
    }
}


/* ------------------- max-width: 600px */
@media (max-width: 600px) {
    html {
        margin-top: 56px;
    }

    .recipe-name {
        font-size: 30px!important;
    }

    .recipe-description-text {
        font-size: 24px!important;
    }

    .recipe-link {
        font-size: 28px!important;
    }

}


/* ------------------- max-width: 640px */
@media (max-width: 640px) {
    .card-panel {
        width: 350px;
    }

    .category-img img {
        width: 150px;
        height: 150px;
    }

    .error-card {
        width: 90%!important;
    }
}

/* ------------------- max-width: 768px */
@media (max-width: 768px) {
    .box-content {
        width: 300px;
    }

    .blue-info-box {
        font-size: 20px;
    }

    .red-info-box h3 {
        font-size: 28px;
    }

    .add-recipe-container {
        width: 350px;
    }
}

/* ------------------- max-width: 992px */
@media (max-width: 992px) {
    

    .recipe-description-text {
        font-size: 20px!important;
    }

    .recipe-link {
        font-size: 24px!important;
    }
}

